pax-derive/tests/01-userdata-error.rs
use pax_derive::UserData;

#[derive(UserData)]
enum Letters {
    A,
    B,
    C(i32),
}

fn main() {}
